# testgitcommithook

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
.githooks/: post-checkout  pre-commit
dev_tools/: post_install.py
src/: git.py
